[build-system]
requires = ["maturin>=1.2"]
build-backend = "maturin"

[project]
name = "tectonic_py"
version = "0.1.0"
description = "Python bindings for tectonic, a modern typesetting system"
authors = [
    { name = "Thijme van Son", email = "Thijme@Thirantos.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/Thirantos/tectonic-py"
Repository = "https://github.com/Thirantos/tectonic-py"
